remove internal method and call assertion siblings directly now that we don't have nested proxy limitations for soft assertions